Fixed bug with the last losses__item having wrong margins

--- a/src/Components/MainPage/Losses/Losses.scss
+++ b/src/Components/MainPage/Losses/Losses.scss
@@ -21,9 +21,11 @@
   align-items: stretch;
   flex-basis: 280px;
 
-  margin: 0 20px 40px 0;
-
   transition: ease-in-out 300ms;
+}
+
+.losses__item:not(:last-child) {
+  margin: 0 20px 40px 0;
 }
 
 @supports (gap: 15px) {
@@ -176,12 +178,19 @@
     flex-basis: auto;
 
     width: 350px;
+  }
+
+  .losses__item:not(:last-child) {
     margin-bottom: 70px;
   }
 
   @supports (gap: 15px) {
     .losses__item {
       margin: 0;
+    }
+
+    .losses__item:not(:last-child) {
+      margin-bottom: 0;
     }
   }
 
